--- a/index.html
+++ b/index.html
@@ -260,7 +260,8 @@
             <li><a href="ropa-senora.html" onclick="agregarAlCarrito('Ropa - Señora')">Señora</a></li>
             <li><a href="ropa-caballero.html" onclick="agregarAlCarrito('Ropa - Caballero')">Caballero</a></li>
             <li><a href="ropa-nino.html" onclick="agregarAlCarrito('Ropa - Niñ@')">Niñ@</a></li>
-            <li><a href="ropa-caballero.html" onclick="agregarAlCarrito('Sudadera de Harper - Caballero 45€')">Sudadera de Harper - 45€</a></li>
+            <!-- Añadido la sudadera de Harper -->
+            <li><a href="#" onclick="agregarAlCarrito('Sudadera de Harper - Caballero 45€')">Sudadera de Harper - 45€</a></li>
           </ul>
         </div>
       </div>
