--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             <li><a href="ropa-senora.html" onclick="agregarAlCarrito('Ropa - Señora')">Señora</a></li>
             <li><a href="ropa-caballero.html" onclick="agregarAlCarrito('Ropa - Caballero')">Caballero</a></li>
             <li><a href="ropa-nino.html" onclick="agregarAlCarrito('Ropa - Niñ@')">Niñ@</a></li>
-            <!-- Añadido la sudadera de Harper -->
+            <!-- Sudadera de Harper dentro de Caballero -->
             <li><a href="#" onclick="agregarAlCarrito('Sudadera de Harper - Caballero 45€')">Sudadera de Harper - 45€</a></li>
           </ul>
         </div>
