--- a/ropa-caballero.html
+++ b/ropa-caballero.html
@@ -3,15 +3,35 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ropa Caballero</title>
+  <title>Ropa Caballero - Amitges</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 20px;
+    }
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+    li {
+      margin-bottom: 10px;
+    }
+    a {
+      text-decoration: none;
+      color: #333;
+      padding: 10px;
+      display: inline-block;
+      background-color: #f2f2f2;
+      border-radius: 5px;
+    }
+    a:hover {
+      background-color: #ddd;
+    }
+  </style>
 </head>
 <body>
   <header>
     <h1>Ropa para Caballero</h1>
   </header>
+
   <section>
-    <h2>Selecciona el producto que deseas</h2>
-    <!-- Aquí va el contenido relacionado con ropa de caballero -->
-  </section>
-</body>
-</html>
