--- a/ropa-caballero.html
+++ b/ropa-caballero.html
@@ -9,12 +9,22 @@
       font-family: Arial, sans-serif;
       padding: 20px;
     }
+    h1 {
+      text-align: center;
+    }
     ul {
       list-style: none;
       padding: 0;
     }
     li {
       margin-bottom: 10px;
+    }
+    .producto {
+      margin-bottom: 20px;
+      padding: 10px;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+      background-color: #f9f9f9;
     }
     a {
       text-decoration: none;
@@ -27,6 +37,20 @@
     a:hover {
       background-color: #ddd;
     }
+    button {
+      padding: 10px 20px;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #45a049;
+    }
+    .carrito {
+      margin-top: 20px;
+    }
   </style>
 </head>
 <body>
@@ -35,3 +59,52 @@
   </header>
 
   <section>
+    <div class="producto">
+      <p>Camisa Casual</p>
+      <p>Precio: 30€</p>
+      <button onclick="agregarAlCarrito('Camisa Casual - 30€')">Añadir al carrito</button>
+    </div>
+    <div class="producto">
+      <p>Pantalón Chino</p>
+      <p>Precio: 40€</p>
+      <button onclick="agregarAlCarrito('Pantalón Chino - 40€')">Añadir al carrito</button>
+    </div>
+    <div class="producto">
+      <p>Sudadera Deportiva</p>
+      <p>Precio: 50€</p>
+      <button onclick="agregarAlCarrito('Sudadera Deportiva - 50€')">Añadir al carrito</button>
+    </div>
+  </section>
+
+  <section class="carrito">
+    <h2>Carrito</h2>
+    <ul id="carrito-contenido">
+      <li>No hay productos en el carrito.</li>
+    </ul>
+    <p id="carrito-total">Total: 0€</p>
+  </section>
+
+  <script>
+    let carrito = [];
+
+    function agregarAlCarrito(producto) {
+      carrito.push(producto);
+      actualizarCarrito();
+    }
+
+    function actualizarCarrito() {
+      const carritoContenido = document.getElementById('carrito-contenido');
+      carritoContenido.innerHTML = carrito.length > 0
+        ? carrito.map(item => `<li>${item}</li>`).join('')
+        : '<li>No hay productos en el carrito.</li>';
+
+      let total = carrito.reduce((total, item) => {
+        const precio = parseFloat(item.split('-')[1].replace('€', '').trim());
+        return total + precio;
+      }, 0);
+
+      document.getElementById('carrito-total').textContent = `Total: ${total}€`;
+    }
+  </script>
+</body>
+</html>
